--- a/references/Snakefile
+++ b/references/Snakefile
@@ -1,8 +1,14 @@
 REF_PATH = "references"
 
-REF_FILT = expand("{REF_PATH}/arabidopsis_filt/arabidopsis_filt.{suffix}", REF_PATH = REF_PATH, suffix = ["grp", "idx.fa", "mappability", "n2g.idx.fa", "seq", "ti", "transcripts.fa"])
-REF_FILT.extend(expand("{REF_PATH}/arabidopsis_filt/arabidopsis_filt.{num}.{suffix}", REF_PATH = REF_PATH, num = [1, 2, 3, 4], suffix = ["bt2", "ebwt"]))
-REF_FILT.extend(expand("{REF_PATH}/arabidopsis_filt/arabidopsis_filt.rev.{num}.{suffix}", REF_PATH = REF_PATH, num = [1, 2], suffix = ["bt2", "ebwt"]))
+REF_FILT_NAME = "{}/arabidopsis_filt/arabidopsis_filt".format(REF_PATH)
+REF_FILT = expand("{REF_FILT_NAME}.{suffix}", REF_FILT_NAME = REF_FILT_NAME, suffix = ["grp", "idx.fa", "seq", "ti", "transcripts.fa", "mappability"])
+REF_FILT.extend(expand("{REF_FILT_NAME}.{num}.{suffix}", REF_FILT_NAME = REF_FILT_NAME, num = [1, 2, 3, 4], suffix = ["bt2", "ebwt"]))
+REF_FILT.extend(expand("{REF_FILT_NAME}.rev.{num}.{suffix}", REF_FILT_NAME = REF_FILT_NAME, num = [1, 2], suffix = ["bt2", "ebwt"]))
+
+REF_SPIKE_NAME = "{}/arabidopsis_spike/arabidopsis_spike".format(REF_PATH)
+REF_SPIKE = expand("{REF_SPIKE_NAME}.{suffix}", REF_SPIKE_NAME = REF_SPIKE_NAME, suffix = ["grp", "idx.fa", "seq", "ti", "transcripts.fa"])
+REF_SPIKE.extend(expand("{REF_SPIKE_NAME}.{num}.ebwt", REF_SPIKE_NAME = REF_SPIKE_NAME, num = [1, 2, 3, 4]))
+REF_SPIKE.extend(expand("{REF_SPIKE_NAME}.rev.{num}.ebwt", REF_SPIKE_NAME = REF_SPIKE_NAME, num = [1, 2]))
 
 
 rule compile_mappability:
@@ -20,6 +26,17 @@ rule generate_arabidopsis_filt:
         REF_FILT
      run:
         shell("mkdir -p {REF_PATH}/arabidopsis_filt")
-        shell("{PROBER} prepare --transcript-to-gene-map {input[5]} --bowtie --bowtie-path {input[0]} --bowtie2 --bowtie2-path {input[1]}"
-              " {input[4]} {REF_PATH}/arabidopsis_filt/arabidopsis_filt")
-        shell("{input[3]} 21 {REF_PATH}/arabidopsis_filt/arabidopsis_filt.transcripts.fa {REF_PATH}/arabidopsis_filt/arabidopsis_filt.mappability")
+        shell("{PROBER} prepare --transcript-to-gene-map {input[5]} --bowtie --bowtie-path {input[0]} --bowtie2 --bowtie2-path {input[1]} {input[4]} {REF_FILT_NAME}")
+        shell("{input[3]} 21 {REF_FILT_NAME}.transcripts.fa {REF_FILT_NAME}.mappability")
+
+rule generate_arabidopsis_spike:
+     input:
+        TOOLS[2], TOOLS[5],
+        "annotation/arabidopsis_spike.fa",
+        "annotation/arabidopsis_spike.t2g"
+     output:
+        REF_SPIKE
+     run:
+        shell("mkdir -p {REF_PATH}/arabidopsis_spike")
+        shell("{PROBER} prepare --transcript-to-gene-map {input[3]} --bowtie --bowtie-path {input[0]} {input[2]} {REF_SPIKE_NAME}")
+
