--- a/tools/Snakefile
+++ b/tools/Snakefile
@@ -1,5 +1,5 @@
 TOOLS_PATH = "tools"
-PROGRAMS = ["cutadapt-1.6", "samtools-0.1.19", "bowtie-1.0.0", "bowtie2-2.1.0", "rsem-1.2.20", "PROBer-0.1.2"]
+PROGRAMS = ["cutadapt-1.6", "samtools-0.1.19", "bowtie-1.0.0", "bowtie2-2.1.0", "rsem-1.2.20", "PROBer-0.1.2", "other_codes_0.1.0"]
 SOURCE_CODES = expand("tools/{program}.tar.gz", program = PROGRAMS)
 TOOLS = expand("tools/{program}", program = PROGRAMS)
 PROBER = "tools/{}/build/src/PROBer".format(PROGRAMS[5])
@@ -52,4 +52,12 @@ rule build_PROBer:
      run: 
           shell("tar -C {TOOLS_PATH} -xzf {input}")
           shell("cd {output} ; mkdir -p build ; cd build ; cmake .. ; make")
+          shell("touch {output}")
+
+rule build_other_codes:
+     input: SOURCE_CODES[6]
+     output: TOOLS[6]
+     run: 
+          shell("tar -C {TOOLS_PATH} -xzf {input}")
+          shell("cd {output} ; make")
           shell("touch {output}")
