--- a/results/Snakefile
+++ b/results/Snakefile
@@ -8,8 +8,8 @@ PROBER_STAT = ["theta", "read_model"]
 
 
 RESULTS = expand("{path}/{file}", path = RESULTS_PATH, 
-                 file = ["number_of_reads_in_real_data.txt", "time_and_memory_table.txt", "mapping_statistics_table.txt",
-                         "grid_search_for_prior.txt"])
+                 file = ["number_of_reads_in_real_data.txt", "time_and_memory_table.txt", "mapping_statistics_table.txt"])
+#                         "grid_search_for_prior.txt"])
 
 
 REAL = "dms_real"
@@ -39,9 +39,8 @@ rule time_and_memory:
      threads: 40
      message: "Run PROBer on the real data and measure running time and memory usage."
      run:
-        shell("{PROBER} estimate --time --bowtie --bowtie-path {input[0]} -p {threads} --output-bam --read-length 37 --size-selection-min 21 --size-selection-max 526 "
-              "{REF_FILT_NAME} {EXP_PATH}/{REAL} --reads {input[2]} {input[3]} & "
-              "{RESULTS_PATH}/scripts/detect_peak_memory {EXP_PATH}/{REAL}")
+        shell("{PROBER} estimate --time --memory --bowtie --bowtie-path {input[0]} -p {threads} --output-bam --read-length 37 --size-selection-min 21 --size-selection-max 526 "
+              "{REF_FILT_NAME} {EXP_PATH}/{REAL} --reads {input[2]} {input[3]}")
 
 rule generate_time_and_memory_table:
      input:
@@ -85,11 +84,11 @@ rule run_PROBer_for_grid_search:
         "--gamma-init {wildcards.gamma} --beta-init {wildcards.beta} -q --output-logMAP " 
         "{REF_FILT_NAME} {EXP_PATH}/{REAL}_{wildcards.gamma}_{wildcards.beta} --bam {input[1]} {input[2]}"
 
-rule generate_grid_search_table:
-     input:
-        expand("{path}/{name}_{gamma}_{beta}.logMAP", path = EXP_PATH, name = REAL, gamma = ["0.0001", "0.001", "0.01", "0.1"], beta = ["0.0001", "0.001", "0.01", "0.1"])
-     output:
-        RESULTS[3]
-     shell:
-        "{RESULTS_PATH}/scripts/generate_grid_search_table {EXP_PATH}/{REAL} {output}"
+#rule generate_grid_search_table:
+#     input:
+#        expand("{path}/{name}_{gamma}_{beta}.logMAP", path = EXP_PATH, name = REAL, gamma = ["0.0001", "0.001", "0.01", "0.1"], beta = ["0.0001", "0.001", "0.01", "0.1"])
+#     output:
+#        RESULTS[3]
+#     shell:
+#        "{RESULTS_PATH}/scripts/generate_grid_search_table {EXP_PATH}/{REAL} {output}"
 
