--- a/simulation_parameters/Makefile
+++ b/simulation_parameters/Makefile
@@ -3,6 +3,8 @@
 clean: 
 	rm -rf *~ scripts/*~ .snakemake
 	rm -f sim_ground_truth* input_list_boxplot.txt digital_spike.*
-	rm -rf simulation
+	rm -rf simulation sim_rsem sim_fake
+	rm -rf spike_in_1e5TPM spike_in_1e4TPM spike_in_1e3TPM spike_in_1e2TPM
+
 
 
