--- a/results/Snakefile
+++ b/results/Snakefile
@@ -14,6 +14,10 @@ RESULTS = expand("{path}/{file}", path = RESULTS_PATH,
 
 
 REAL = "dms_real"
+SIM = "dms_sim"
+RSEM_SIM = "rsem_sim"
+SIM2 = "dms_sim2"
+FAKE = "dms_sim_fake"
 
 
 #### Count number of reads in (-) and (+) channels after adaptors are trimmed
