--- a/simulation_parameters/Snakefile
+++ b/simulation_parameters/Snakefile
@@ -1,3 +1,5 @@
+import random
+
 rule copy_truth:
      input: expand("{path}/{name}.{{suffix}}", path = EXP_PATH, name = REAL)
      output: expand("{path}/sim_ground_truth.{{suffix}}", path = SIMPARAM_PATH)
@@ -71,3 +73,54 @@ rule build_fake:
             if i != 1:
                shell("cp {{input[{0}]}} {{output[{0}]}}".format(i))
         shell("{SIMPARAM_PATH}/scripts/makeFakeBeta {ANNO_PATH} {input[1]} {output[1]} 20150528")
+
+rule simulate:
+     input: rules.build_simulation.output,
+            REF_FILT
+     output: expand("{path}/{name}_{channel}_{num}.fq", path = DATA_PATH, name = SIM, channel = CHANNELS, num = [1, 2])
+     run:
+        random.seed(20150516)
+        my_seed = random.getrandbits(32)
+        shell("{PROBER} simulate {REF_FILT_NAME} {SIMPARAM_PATH}/simulation.config {SIMPARAM_PATH}/simulation/simulation minus 30000000 {DATA_PATH}/{SIM} --seed {my_seed}")
+        my_seed = random.getrandbits(32)
+        shell("{PROBER} simulate {REF_FILT_NAME} {SIMPARAM_PATH}/simulation.config {SIMPARAM_PATH}/simulation/simulation plus 30000000 {DATA_PATH}/{SIM} --seed {my_seed}")
+
+rule simulate2:
+     input: rules.build_simulation.output,
+            REF_FILT
+     output: expand("{path}/{name}_{channel}_{num}.fq", path = DATA_PATH, name = SIM2, channel = CHANNELS, num = [1, 2])
+     run:
+        random.seed(0)
+        my_seed = random.getrandbits(32)
+        shell("{PROBER} simulate {REF_FILT_NAME} {SIMPARAM_PATH}/simulation.config {SIMPARAM_PATH}/simulation/simulation minus 30000000 {DATA_PATH}/{SIM2} --seed {my_seed}")
+        my_seed = random.getrandbits(32)
+        shell("{PROBER} simulate {REF_FILT_NAME} {SIMPARAM_PATH}/simulation.config {SIMPARAM_PATH}/simulation/simulation plus 30000000 {DATA_PATH}/{SIM2} --seed {my_seed}")
+
+rule rsem_simulate:
+     input: rules.build_sim_rsem.output,
+            REF_FILT
+     output: "{}/{}.fq".format(DATA_PATH, RSEM_SIM)
+     shell: "{TOOLS[4]}/rsem-simulate-reads {REF_FILT_NAME} {input[1]} {input[0]} 0.09 30000000 {DATA_PATH}/{RSEM_SIM} --seed 20150526"
+
+rule simulate_spike_in:
+     input: rules.build_spike_in.output,
+            REF_SPIKE
+     output: expand("{path}/{name}_{channel}_{num}.fq", path = DATA_PATH, name = "sim_spike_{expr}TPM", channel = CHANNELS, num = [1, 2])
+     run:
+        random.seed(20150518)
+        my_seed = random.getrandbits(32)
+        shell("{PROBER} simulate {REF_SPIKE_NAME} {SIMPARAM_PATH}/simulation.config {SIMPARAM_PATH}/spike_in_{wildcards.expr}TPM/spike_in_{wildcards.expr}TPM minus 30000000 {DATA_PATH}/sim_spike_{wildcards.expr}TPM --seed {my_seed}")
+        my_seed = random.getrandbits(32)
+        shell("{PROBER} simulate {REF_SPIKE_NAME} {SIMPARAM_PATH}/simulation.config {SIMPARAM_PATH}/spike_in_{wildcards.expr}TPM/spike_in_{wildcards.expr}TPM plus 30000000 {DATA_PATH}/sim_spike_{wildcards.expr}TPM --seed {my_seed}")
+
+rule simulate_fake:
+     input: rules.build_fake.output,
+            REF_FILT
+     output: expand("{path}/{name}_{channel}_{num}.fq", path = DATA_PATH, name = FAKE, channel = CHANNELS, num = [1, 2])
+     run:
+        random.seed(20150528)
+        my_seed = random.getrandbits(32)
+        shell("{PROBER} simulate {REF_FILT_NAME} {SIMPARAM_PATH}/simulation.config {SIMPARAM_PATH}/sim_fake/sim_fake minus 30000000 {DATA_PATH}/{FAKE} --seed {my_seed}")
+        my_seed = random.getrandbits(32)
+        shell("{PROBER} simulate {REF_FILT_NAME} {SIMPARAM_PATH}/simulation.config {SIMPARAM_PATH}/sim_fake/sim_fake plus 30000000 {DATA_PATH}/{FAKE} --seed {my_seed}")
+
