--- a/results/Snakefile
+++ b/results/Snakefile
@@ -153,10 +153,10 @@ rule bowtie_alignment_best_strata:
      threads: 30
      run:
         if wildcards.sample_name.startswith("sim_spike"):
-           shell("{input[1]}/bowtie --norc -v 3 -a -v 3 --best --strata -S -p {threads} {REF_SPIKE_NAME} {input[2]} 2> {output[1]} | "
+           shell("{input[1]}/bowtie --norc -a -v 3 --best --strata -S -p {threads} {REF_SPIKE_NAME} {input[2]} 2> {output[1]} | "
                  "{input[0]}/samtools view -b -S -o {output[0]} -")
         else:
-           shell("{input[1]}/bowtie --norc -v 3 -a -v 3 --best --strata -S -p {threads} {REF_FILT_NAME} {input[2]} 2> {output[1]} | "
+           shell("{input[1]}/bowtie --norc -a -v 3 --best --strata -S -p {threads} {REF_FILT_NAME} {input[2]} 2> {output[1]} | "
                  "{input[0]}/samtools view -b -S -o {output[0]} -")
 
 
@@ -175,7 +175,31 @@ rule calculate_Ding_score:
      output: "{sample_name}_Ding.scores"
      shell: "{RESULTS_PATH}/scripts/calcDing {input} {output}"
 
+rule bowtie_alignment_best:
+     input: TOOLS[1], TOOLS[2],
+            "{sample_name}_{channel}_1.fq",
+            REF_FILT, REF_SPIKE
+     output: "{sample_name}_{channel}_best.bam",
+             "{sample_name}_{channel}_best.err"
+     threads: 30
+     run:
+        if wildcards.sample_name.startswith("sim_spike"):
+           shell("{input[1]}/bowtie --norc -v 3 --best -S -p {threads} {REF_SPIKE_NAME} {input[2]} 2> {output[1]} | "
+                 "{input[0]}/samtools view -b -S -o {output[0]} -")
+        else:
+           shell("{input[1]}/bowtie --norc -v 3 --best -S -p {threads} {REF_FILT_NAME} {input[2]} 2> {output[1]} | "
+                 "{input[0]}/samtools view -b -S -o {output[0]} -")
+
 rule extract_count_vector_for_Talkish_method:
+     input: "{sample_name}_{channel}_best.bam"
+     output: "{sample_name}_{channel}_best.counts"
+     shell: "{RESULTS_PATH}/scripts/extractCountVectors {output} {input} all"
+
+rule calculate_Talkish_score:
+     input: expand("{{sample_name}}_{channel}_best.counts", channel = CHANNELS)
+     output: "{sample_name}_Talkish.scores"
+     shell: "{RESULTS_PATH}/scripts/calcTalkish {input} {output}"
+
 
 
 
