--- a/results/Snakefile
+++ b/results/Snakefile
@@ -9,8 +9,8 @@ PROBER_STAT = ["theta", "read_model"]
 
 
 RESULTS = expand("{path}/{file}", path = RESULTS_PATH, 
-                 file = ["number_of_reads_in_real_data.txt", "time_and_memory_table.txt", "mapping_statistics_table.txt", "sim_boxplot.pdf", "sim2_boxplot.pdf"])
-#                         "grid_search_for_prior.txt"])
+                 file = ["number_of_reads_in_real_data.txt", "time_and_memory_table.txt", "mapping_statistics_table.txt", "grid_search_for_prior.txt",
+                         "sim_boxplot.pdf", "sim2_boxplot.pdf", "scatters.pdf"])
 
 
 REAL = "dms_real"
@@ -88,13 +88,13 @@ rule run_PROBer_for_grid_search:
         "--gamma-init {wildcards.gamma} --beta-init {wildcards.beta} -q --output-logMAP " 
         "{REF_FILT_NAME} {EXP_PATH}/{REAL}_{wildcards.gamma}_{wildcards.beta} --bam {input[1]} {input[2]}"
 
-#rule generate_grid_search_table:
-#     input:
-#        expand("{path}/{name}_{gamma}_{beta}.logMAP", path = EXP_PATH, name = REAL, gamma = ["0.0001", "0.001", "0.01", "0.1"], beta = ["0.0001", "0.001", "0.01", "0.1"])
-#     output:
-#        RESULTS[3]
-#     shell:
-#        "{RESULTS_PATH}/scripts/generate_grid_search_table {EXP_PATH}/{REAL} {output}"
+rule generate_grid_search_table:
+     input:
+        expand("{path}/{name}_{gamma}_{beta}.logMAP", path = EXP_PATH, name = REAL, gamma = ["0.0001", "0.001", "0.01", "0.1"], beta = ["0.0001", "0.001", "0.01", "0.1"])
+     output:
+        RESULTS[3]
+     shell:
+        "{RESULTS_PATH}/scripts/generate_grid_search_table {EXP_PATH}/{REAL} {output}"
 
 #########
 
@@ -129,19 +129,20 @@ rule run_PROBer:
                  "{REF_FILT_NAME} {wildcards.sample_name}_SE --bam {input[1]} {input[2]}")
 
 rule run_RSEM_Spats_start_pipeline:
-     input: TOOLS[6],
+     input: TOOLS[4], TOOLS[6]
             expand("{path}/{{sample_name}}_{channel}.bam", path = EXP_PATH, channel = CHANNELS),
             "{}/input_list_boxplot.txt".format(SIMPARAM_PATH),
             REF_FILT, REF_SPIKE
-     output: expand("{path}/{{sample_name}}_SE_RSEM.{suffix}", path = EXP_PATH, suffix = ["gamma", "beta"])
+     output: expand("{path}/{{sample_name}}_SE_RSEM.{suffix}", path = EXP_PATH, suffix = ["gamma", "beta"]),
+             expand("{path}/{{sample_name}}_SE_RSEM_{channel}.isoforms.results", path = EXP_PATH, channel = CHANNELS)
      threads: 30
      run:
         if wildcards.sample_name.startswith("sim_spike"):
-           shell("{input[0]}/PROBer-single-batch-estimate -p {threads} --input-list {input[3]} {REF_SPIKE_NAME} {wildcards.sample_name}_SE_RSEM "
-                 "--bam {input[1]} {input[2]}")
+           shell("{input[1]}/PROBer-single-batch-estimate -p {threads} --input-list {input[4]} --RSEM-path {input[0]} {REF_SPIKE_NAME} {wildcards.sample_name}_SE_RSEM "
+                 "--bam {input[2]} {input[3]}")
         else:
-           shell("{input[0]}/PROBer-single-batch-estimate -p {threads} --input-list {input[3]} {REF_FILT_NAME} {wildcards.sample_name}_SE_RSEM "
-                 "--bam {input[1]} {input[2]}")
+           shell("{input[1]}/PROBer-single-batch-estimate -p {threads} --input-list {input[4]} --RSEM-path {input[0]} {REF_FILT_NAME} {wildcards.sample_name}_SE_RSEM "
+                 "--bam {input[2]} {input[3]}")
 
 rule bowtie_alignment_best_strata:
      input: TOOLS[1], TOOLS[2],
@@ -209,3 +210,31 @@ rule generate_box_plot:
      output: "{}/{{out_name}}_boxplot.pdf".format(RESULTS_PATH)
      shell: "{RESULTS_PATH}/scripts/genBoxPlot {input} {output}"
 
+rule bowtie_rsem_sim:
+     input: TOOLS[1], TOOLS[2],
+            expand("{path}/{name}.fq", path = DATA_PATH, name = RSEM_SIM),
+            REF_FILT
+     output: expand("{path}/{name}.{suffix}", path = EXP_PATH, name = RSEM_SIM, suffix = ["bam", "err"])
+     threads: 30
+     shell:
+        "{input[1]}/bowtie --norc -v 3 -a -m 200 -S -p {threads} {REF_FILT_NAME} {input[2]} 2> {output[1]} | {input[0]}/samtools view -b -S -o {output[0]} -"
+
+rule run_rsem_on_rsem_simulated_data:
+     input: TOOLS[4],
+            rules.bowtie_rsem_sim.output[0],
+            REF_FILT
+     output: expand("{path}/{name}.isoforms.results", path = EXP_PATH, name = RSEM_SIM)
+     threads: 30
+     shell:
+        "{input[0]}/rsem-calculate-expression -p {threads} --bam --strand-specific --no-bam-output {input[1]} {REF_FILT_NAME} {EXP_PATH}/{RSEM_SIM}"
+
+rule generate_scatter_plots:
+     input: "{}/sim_ground_truth.expr".format(SIMPARAM_PATH),
+            "{}/dms_sim_SE.expr".format(EXP_PATH),
+            expand("{path}/dms_sim_SE_RSEM_{channel}.isoforms.results", path = EXP_PATH, channel = CHANNELS),
+            rules.run_rsem_on_rsem_simulated_data.output
+     output: RESULTS[6]
+     shell:
+        "{RESULTS_PATH}/scripts/genExprScatterPlots {input} {output}"
+            
+     
